src/test/ui/parser/impl-qpath.stderr
error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/impl-qpath.rs:18:1
   |
LL | FAIL //~ ERROR
   | ^^^^ expected one of `!` or `::` here

error: aborting due to previous error

